# paper-digest

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  READEME.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  terminology.html
.github/: Dockerfile  Dockerfile.markmap  requirements.txt
.github/ISSUE_TEMPLATE/: paper_request.yaml
.github/workflows/: deploy.yml
_sources/: index.rst  terminology.rst
_sources/paper/: gill2022ai.rst  rigaki2023survey.rst  rodriguez2023survey.rst  xu2021privacy-outline.md  xu2021privacy.rst  yang2020hyperparameter.rst
_sources/resource/: ppml.rst
_static/css/: custom.css
_static/gen_keyword/: template.rst
_static/markmap/: demo.html  xu2021privacy.html
doctrees/: environment.pickle  index.doctree
doctrees/paper/: rodriguez2023survey.doctree
html/: .buildinfo  genindex.html  objects.inv
paper/: gill2022ai.html  liu2021machine.html  rigaki2023survey.html  rodriguez2023survey.html  xu2021privacy-outline.html  xu2021privacy.html  yang2020hyperparameter.html
resource/: ppml.html
resource/keyterm/: key.html  template.html
resource/notebook/: nb_tenseal-save-bfv.html  nb_tenseal-save-bfv.ipynb  nb_tenseal.html  nb_tenseal.ipynb
source/: conf.py  index.rst  paper.bib  terminology.rst
source/mindmap/: zhuang2020comprehensive.md
source/paper/: antelmi2023survey.rst  gill2022ai.rst  liu2021machine.rst  rigaki2023survey.rst  rodriguez2023survey.rst  xu2021privacy-outline.md  xu2021privacy.rst  zhuang2020comprehensive.rst
source/resource/: ppml.rst
(+17 files in other folders)
