[project]
name = "paper-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "arxiv2bib>=1.0.8",
    "bibtexparser>=1.4.3",
    "ipython>=9.5.0",
    "jinja2>=3.1.6",
    "myst-parser>=4.0.1",
    "nbsphinx>=0.9.7",
    "pandas>=2.3.2",
    "pygments>=2.19.2",
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinxcontrib-mermaid>=1.0.0",
]
